--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1"
   }
 }
